# instagram-practice

./: .requirements.txt.swp  pyproject.toml  requirements.txt
app/: db.sqlite3  requirements.txt
app/config/: settings.py  urls.py
app/posts/: forms.py  models.py  urls.py  views.py
app/posts/migrations/: 0001_initial.py  0002_postimage.py  0003_postcomment.py  0004_auto_20200201_1808.py  0005_post_content_html.py
app/static/css/: style.css
app/templates/: base.html
app/templates/posts/: post_ammend.html  post_create.html  post_list.html
