[tool.poetry]
name = "instagram-practice"
version = "0.1.0"
description = ""
authors = ["Hyojin Kwon <raccoonhj33@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
boto3 = "^1.11.12"
django-extensions = "^2.2.7"
gunicorn = "^20.0.4"
django-secrets-manager = "^0.1.10"
django-storages = "^1.9.1"
ipython = "^7.12.0"
notebook = "^6.4.1"
Pillow = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
